--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playground-release-please",
+  "name": "@hpfs74/playground-release-please",
   "version": "1.1.0",
   "description": "Test 123",
   "main": "index.js",
