--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -8,9 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: google-github-actions/release-please-action@v3
+        id: release
         with:
           release-type: node
-          package-name: test-release-please
+          package-name: test-release-pleasex
       - uses: actions/checkout@v3
         if: ${{ steps.release.outputs.release_created }}
       # Setup .npmrc file to publish to GitHub Packages
